testing/tests/ui/iso646.stderr
error: the binary AND operator is called `bitand` in askama
 --> <source attribute>:1:6
       " b }}"
 --> tests/ui/iso646.rs:4:34
  |
4 | #[template(ext = "txt", source = "{{ a & b }}")]
  |                                  ^^^^^^^^^^^^^

error: the binary XOR operator is called `xor` in askama
 --> <source attribute>:1:6
       " b }}"
  --> tests/ui/iso646.rs:25:34
   |
25 | #[template(ext = "txt", source = "{{ a ^ b }}")]
   |                                  ^^^^^^^^^^^^^

error[E0609]: no field `c` on type `&XorIso646`
  --> tests/ui/iso646.rs:31:10
   |
31 | #[derive(Template)]
   |          ^^^^^^^^ unknown field
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
